--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+{{form-address}}
+{{form-date-of-birth}}
+{{form-email}}
+{{form-income}}
+{{form-name}}
+{{form-phone}}
+{{form-ssn}}
