Centralize css mixin imports in config file. Tweak field margins.

--- a/addon/styles/config.scss
+++ b/addon/styles/config.scss
@@ -1,2 +1,30 @@
 $font-family: inherit;
 $font-color: #303030;
+
+.cc-fieldset {
+  @include cc-fieldset;
+}
+
+.cc-field {
+  @include cc-field;
+}
+
+.cc-field--label {
+  @include cc-field--label;
+}
+
+.cc-field--description {
+  @include cc-field--description;
+}
+
+.cc-input {
+  @include cc-input;
+}
+
+.cc-popup {
+  @include cc-popup;
+}
+
+.cc-tooltip {
+  @include cc-tooltip;
+}
