Add error handling to email field. Use __ for descendent class names intead of --.

--- a/addon/templates/components/cc-fieldset.hbs
+++ b/addon/templates/components/cc-fieldset.hbs
@@ -1,6 +1,5 @@
 <div class="cc-fieldset">
-  {{yield (hash field=(component "cc-field" onFocusIn=(action "onFocusIn")
-                                            onFocusOut=(action "onFocusOut"))
+  {{yield (hash field=(component "cc-field")
                 states=states)
   }}
 </div>
