--- a/tests/dummy/app/styles/layout.scss
+++ b/tests/dummy/app/styles/layout.scss
@@ -8,8 +8,9 @@ $border-color: #dce7f0;
   width: 100%;
   box-sizing: border-box;
   background: #ffffff;
+  overflow: hidden;
 
-  &--label {
+  &__label {
     position: absolute;
     top: 0px;
     width: 100%;
@@ -29,7 +30,7 @@ $border-color: #dce7f0;
     }
   }
 
-  &--fields {
+  &__fields {
     opacity: 0;
     pointer-events: none;
     display: flex;
@@ -37,7 +38,7 @@ $border-color: #dce7f0;
     margin-bottom: -1px;
   }
 
-  &--value {
+  &__value {
     position: absolute;
     top: 0em;
     opacity: 0;
@@ -47,7 +48,7 @@ $border-color: #dce7f0;
     padding-left: 10px;
   }
 
-  &--tooltip {
+  &__tooltip {
     position: absolute;
     top: 0px;
     right: 1em;
@@ -55,7 +56,7 @@ $border-color: #dce7f0;
     display: flex;
     align-items: center;
 
-    &--target {
+    &__target {
       background: #ffdf91;
       border-radius: 1.5em;
       display: block;
@@ -68,30 +69,34 @@ $border-color: #dce7f0;
   }
 
   &--active {
-    .compound-component--fields {
+    .compound-component__fields {
       opacity: 1;
       pointer-events: all;
     }
 
-    .compound-component--label {
+    .compound-component__label {
       opacity: 0;
       pointer-events: none;
     }
   }
 
   &--show-value {
-    .compound-component--label {
+    .compound-component__label {
       opacity: 0;
       pointer-events: none;
     }
 
-    .compound-component--value {
+    .compound-component__value {
       opacity: 1;
       pointer-events: all;
     }
   }
 
-  &--field {
+  &--error {
+    border-color: #e4b7b7;
+  }
+
+  &__field {
     flex: 1;
     padding-left: 10px;
     margin-right: -1px;
