--- a/addon/templates/components/cc-tooltip.hbs
+++ b/addon/templates/components/cc-tooltip.hbs
@@ -1,12 +1,17 @@
-<div class="cc-tooltip">
-  {{yield (hash
-    target=(component "cc-tooltip--target" tooltip=(hash targetId=targetId
-                                                         action=(hash show=(action "show")
-                                                                      hide=(action "hide")
-                                                                      toggle=(action "toggle"))
-                                                         showTooltip=showTooltip))
-    popup=(component "cc-popup" targetId=targetId
-                                showPopup=showTooltip
-                                show=(action "show")
-                                hide=(action "hide")))}}
+<div class="cc-tooltip {{class}}">
+  {{#cc-tooltip--target tooltip=(hash targetId=targetId
+                                     action=(hash show=(action "show")
+                                                  hide=(action "hide")
+                                                  toggle=(action "toggle"))
+                                     showTooltip=showTooltip)}}
+      ?
+  {{/cc-tooltip--target}}
+  {{#cc-popup targetId=targetId
+                         showPopup=showTooltip
+                         show=(action "show")
+                         hide=(action "hide")
+                        attachment='middle left'
+                        targetAttachment='middle right'}}
+    {{yield}}
+  {{/cc-popup}}
 </div>
