--- a/tests/dummy/app/styles/layout.scss
+++ b/tests/dummy/app/styles/layout.scss
@@ -52,20 +52,9 @@ $border-color: #dce7f0;
     position: absolute;
     top: 0px;
     right: 1em;
-    height: 100%;
+    height: 55px;
     display: flex;
     align-items: center;
-
-    &__target {
-      background: #ffdf91;
-      border-radius: 1.5em;
-      display: block;
-      width: 1.5em;
-      height: 1.5em;
-      line-height: 1.5em;
-      text-align: center;
-      color: #8f6b15;
-    }
   }
 
   &--active {
