--- a/tests/dummy/app/templates/components/form-address.hbs
+++ b/tests/dummy/app/templates/components/form-address.hbs
@@ -60,17 +60,8 @@
         {{city}} {{state}} {{zip}}
       {{/fs.field}}
     </div>
-    <div class="compound-component__tooltip">
-      {{#cc-tooltip as |tooltip|}}
-        {{#tooltip.target}}
-          <div class="compound-component__tooltip__target">
-            ?
-          </div>
-        {{/tooltip.target}}
-        {{#tooltip.popup attachment='middle left' targetAttachment='middle right'}}
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacinia ipsum quis risus finibus, in luctus arcu molestie. Suspendisse tincidunt urna odio, id iaculis nisi cursus gravida. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac <a href="#">turpis egestas</a>.
-        {{/tooltip.popup}}
-      {{/cc-tooltip}}
-    </div>
+    {{#cc-tooltip class="compound-component__tooltip"}}
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacinia ipsum quis risus finibus, in luctus arcu molestie. Suspendisse tincidunt urna odio, id iaculis nisi cursus gravida. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac <a href="#">turpis egestas</a>.
+    {{/cc-tooltip}}
   </div>
 {{/cc-fieldset}}
