Use __ instead of -- for nested elements.

--- a/addon/styles/cc-field__description.scss
+++ b/addon/styles/cc-field__description.scss
@@ -1,4 +1,4 @@
-@mixin cc-field--description (
+@mixin cc-field__description (
   $color: $font-color,
   $opacity: 0.6,
   $font-family: $font-family,
