--- a/addon/styles/compound-components.scss
+++ b/addon/styles/compound-components.scss
@@ -1,6 +1,6 @@
 @import 'cc-field';
-@import 'cc-field--label';
-@import 'cc-field--description';
+@import 'cc-field__label';
+@import 'cc-field__description';
 @import 'cc-fieldset';
 @import 'cc-popup';
 @import 'cc-tooltip';
