--- a/addon/styles/config.scss
+++ b/addon/styles/config.scss
@@ -9,13 +9,13 @@ $font-color: #303030;
   @include cc-field;
 }
 
-.cc-field--label {
-  @include cc-field--label;
-}
+  .cc-field__label {
+    @include cc-field__label;
+  }
 
-.cc-field--description {
-  @include cc-field--description;
-}
+  .cc-field__description {
+    @include cc-field__description;
+  }
 
 .cc-input {
   @include cc-input;
@@ -29,9 +29,9 @@ $font-color: #303030;
   @include cc-tooltip;
 }
 
-.cc-tooltip__target {
-  @include cc-tooltip__target;
-}
+  .cc-tooltip__target {
+    @include cc-tooltip__target;
+  }
 
 .cc-error-message {
   @include cc-error-message;
