--- a/addon/templates/components/cc-field--label.hbs
+++ b/addon/templates/components/cc-field--label.hbs
@@ -1,3 +1,3 @@
-<label class="cc-field--label" id={{ids.label}} for={{ids.input}}>
+<label class="cc-field__label" id={{ids.label}} for={{ids.input}}>
   {{yield}}
 </label>
