Update how focusIn and focusOut works to handle multi-input formsets.

--- a/tests/dummy/app/templates/components/form-address.hbs
+++ b/tests/dummy/app/templates/components/form-address.hbs
@@ -13,9 +13,7 @@
             Home Address
           {{/f.label}}
           {{f.input
-            value=street
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=street}}
         {{/fs.field}}
       </div>
 
@@ -25,9 +23,7 @@
             Apt Site (Optional)
           {{/f.label}}
           {{f.input
-            value=suite
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=suite}}
         {{/fs.field}}
       </div>
 
@@ -37,9 +33,7 @@
             Zip Code
           {{/f.label}}
           {{f.input
-            value=zip
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=zip}}
         {{/fs.field}}
       </div>
 
@@ -49,9 +43,7 @@
             City
           {{/f.label}}
           {{f.input
-            value=city
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=city}}
         {{/fs.field}}
       </div>
 
@@ -61,9 +53,7 @@
             State
           {{/f.label}}
           {{f.input
-            value=state
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=state}}
         {{/fs.field}}
       </div>
     </div>
