--- a/tests/dummy/app/templates/components/form-date-of-birth.hbs
+++ b/tests/dummy/app/templates/components/form-date-of-birth.hbs
@@ -12,9 +12,7 @@
             Date of Birth
           {{/f.label}}
           {{f.input
-            value=value
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=value}}
         {{/fs.field}}
       </div>
     </div>
