--- a/tests/dummy/app/templates/components/form-email.hbs
+++ b/tests/dummy/app/templates/components/form-email.hbs
@@ -13,9 +13,7 @@
           {{/f.label}}
           {{f.input
             type="email"
-            value=value
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=value}}
         {{/fs.field}}
       </div>
     </div>
