--- a/tests/dummy/app/templates/components/form-name.hbs
+++ b/tests/dummy/app/templates/components/form-name.hbs
@@ -13,9 +13,7 @@
             First Name
           {{/f.label}}
           {{f.input
-            value=firstName
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=firstName}}
         {{/fs.field}}
       </div>
 
@@ -25,9 +23,7 @@
             MI
           {{/f.label}}
           {{f.input
-            value=middleName
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=middleName}}
         {{/fs.field}}
       </div>
 
@@ -37,9 +33,7 @@
             Last Name
           {{/f.label}}
           {{f.input
-            value=lastName
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=lastName}}
         {{/fs.field}}
       </div>
     </div>
