--- a/tests/dummy/app/templates/components/form-ssn.hbs
+++ b/tests/dummy/app/templates/components/form-ssn.hbs
@@ -12,15 +12,13 @@
             Social Security Number
           {{/f.label}}
           {{f.input
-            value=value
-            onFocusIn=(action "onFocusIn")
-            onFocusOut=(action "onFocusOut")}}
+            value=value}}
         {{/fs.field}}
       </div>
     </div>
 
     {{cc-error-message error=errorState.message}}
-    
+
     {{#cc-tooltip class="compound-component__tooltip"}}
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacinia ipsum quis risus finibus, in luctus arcu molestie. Suspendisse tincidunt urna odio, id iaculis nisi cursus gravida. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac <a href="#">turpis egestas</a>.
     {{/cc-tooltip}}
