Fix formatting of income field.

--- a/tests/dummy/app/templates/components/form-income.hbs
+++ b/tests/dummy/app/templates/components/form-income.hbs
@@ -12,7 +12,7 @@
             Total Annual Income
           {{/f.label}}
           {{f.input
-            value=value}}
+            value=conditionalValue}}
         {{/fs.field}}
       </div>
     </div>
