--- a/tests/dummy/app/styles/layout.scss
+++ b/tests/dummy/app/styles/layout.scss
@@ -11,7 +11,6 @@ $border-color: #dce7f0;
   overflow: hidden;
 
   &__label {
-    position: absolute;
     top: 0px;
     width: 100%;
     height: 100%;
@@ -23,7 +22,8 @@ $border-color: #dce7f0;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding-left: 10px;
+    padding: 10px;
+    line-height: 34px;
 
     &:hover {
       color: #0887e9;
@@ -31,6 +31,8 @@ $border-color: #dce7f0;
   }
 
   &__fields {
+    position: absolute;
+    top: 0em;
     opacity: 0;
     pointer-events: none;
     display: flex;
@@ -52,18 +54,20 @@ $border-color: #dce7f0;
     position: absolute;
     top: 0px;
     right: 1em;
-    height: 55px;
+    height: 53px;
     display: flex;
     align-items: center;
   }
 
   &--active {
     .compound-component__fields {
+      position: relative;
       opacity: 1;
       pointer-events: all;
     }
 
     .compound-component__label {
+      position: absolute;
       opacity: 0;
       pointer-events: none;
     }
@@ -71,11 +75,13 @@ $border-color: #dce7f0;
 
   &--show-value {
     .compound-component__label {
+      position: absolute;
       opacity: 0;
       pointer-events: none;
     }
 
     .compound-component__value {
+      position: relative;
       opacity: 1;
       pointer-events: all;
     }
