--- a/addon/styles/cc-error-message.scss
+++ b/addon/styles/cc-error-message.scss
@@ -1,7 +1,7 @@
 @mixin cc-error-message (
-  $font-family: $font-family,
-  $color: #a32222,
-  $background: #f8f2f2
+  $font-family,
+  $color,
+  $background
 ) {
   font-family: $font-family;
   color: $color;
