--- a/addon/styles/cc-field__description.scss
+++ b/addon/styles/cc-field__description.scss
@@ -1,9 +1,9 @@
 @mixin cc-field__description (
-  $color: $font-color,
-  $opacity: 0.6,
-  $font-family: $font-family,
-  $font-size: 0.9em,
-  $margin: 0.3em 0 0.6em 0
+  $color,
+  $opacity,
+  $font-family,
+  $font-size,
+  $margin
 ) {
   font-size: $font-size;
   margin: $margin;
