--- a/addon/styles/cc-field__label.scss
+++ b/addon/styles/cc-field__label.scss
@@ -1,7 +1,7 @@
 @mixin cc-field__label (
-  $color: $font-color,
-  $font-family: $font-family,
-  $margin: 0.3em 0
+  $color,
+  $font-family,
+  $margin
 ) {
   display: block;
   font-weight: bold;
